# auth0

./: .gitignore  auth0.cabal  stack.yaml
src/Web/: Auth0.hs
src/Web/Auth0/: Authentication.hs  Common.hs  JWT.hs  Management.hs  Stats.hs  Types.hs
